@@ -17,8 +17,10 @@ apport (0.79) UNRELEASED; urgency=low
     - Fix lspci argument: -n instead of -m.
     - Add /proc/cmdline.
   * debian/rules: Use langpack.mk for updating the .desktop files.
+  * Add po/Makevars to specify the domain, to make intltool figure out the
+    gettext domain automatically.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 21 May 2007 09:36:39 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 21 May 2007 15:33:24 +0200
 
 apport (0.78) gutsy; urgency=low
 
